--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start-electron": "npm run build-electron && electron .",
+    "build-electron": "tsc electron/main.ts electron/preload.ts --outDir dist-electron",
+    "dev:desktop": "concurrently \"npm run dev\" \"npm run start-electron\"",
+    "build:desktop": "npm run build && electron-builder --mac"
   },
   "dependencies": {
     "@base44/sdk": "^0.1.2",
@@ -75,6 +79,19 @@
     "globals": "^15.14.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.1.0"
+    "vite": "^6.1.0",
+    "electron": "*",
+    "electron-builder": "*",
+    "electron-updater": "*",
+    "concurrently": "*",
+    "typescript": "*"
+  },
+  "main": "dist-electron/main.js",
+  "build": {
+    "appId": "com.focana.app",
+    "mac": {
+      "target": "dmg",
+      "identity": null
+    }
   }
 }
