--- a/package.json
+++ b/package.json
@@ -72,6 +72,10 @@
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^9.2.1",
+    "electron": "^38.0.0",
+    "electron-builder": "^26.0.12",
+    "electron-updater": "^6.6.2",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
@@ -79,12 +83,9 @@
     "globals": "^15.14.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
+    "typescript": "*",
     "vite": "^6.1.0",
-    "electron": "*",
-    "electron-builder": "*",
-    "electron-updater": "*",
-    "concurrently": "*",
-    "typescript": "*"
+    "wait-on": "^8.0.4"
   },
   "main": "dist-electron/main.js",
   "build": {
